syntax = "proto3";
package kopi.dex;

import "gogoproto/gogo.proto";

option go_package = "github.com/kopi-money/kopi/x/dex/types";

message LiquiditySum {
  string denom = 1;

  bytes amount = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

